--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Favicon -->
-  <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon" />
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
   <!-- Glidejs -->
@@ -22,7 +22,7 @@
   <!-- Navigation -->
   <nav class="nav">
     <div class="wrapper container">
-      <div class="logo"><a href="">JELMPB-Shop</a></div>
+      <div class="logo"><a href="index.html">JELMPB-Shop</a></div>
       <ul class="nav-list">
         <div class="top">
           <label for="" class="btn close-btn"><i class="fas fa-times"></i></label>
@@ -128,7 +128,7 @@
         <img src="./images/toilette propre.jpg" alt="" />
         <div class="promotion-content">
           <h3>ASSAINISSEMENT DES<br>TOILLETTES</h3>
-          <a href="">PARTICIPEZ</a>
+          <a href="https://www.facebook.com/%C3%89l%C3%A8ve-entrepreneur-du-lyc%C3%A9e-moderne-de-port-bouet-102268155390758">PARTICIPEZ</a>
         </div>
       </div>
 
@@ -136,7 +136,7 @@
         <img src="./images/ecole verte.jpg" alt="" />
         <div class="promotion-content">
           <h3>ECOLES VERTES</h3>
-          <a href="">PARTICIPEZ</a>
+          <a href="https://www.facebook.com/%C3%89l%C3%A8ve-entrepreneur-du-lyc%C3%A9e-moderne-de-port-bouet-102268155390758">PARTICIPEZ</a>
         </div>
       </div>
 
@@ -144,7 +144,7 @@
         <img src="./images/dechets plastique.jpg" alt="" />
         <div class="promotion-content">
           <h3>DECHETS PLASTIQUES</h3>
-          <a href="">PARTICIPEZ</a>
+          <a href="https://www.facebook.com/%C3%89l%C3%A8ve-entrepreneur-du-lyc%C3%A9e-moderne-de-port-bouet-102268155390758">PARTICIPEZ</a>
         </div>
       </div>
 
@@ -160,7 +160,7 @@
         <img src="./images/covid 19.jpg" alt="" />
         <div class="promotion-content">
           <h3>COVID-19</h3>
-          <a href="">PARTICIPEZ</a>
+          <a href="https://www.facebook.com/%C3%89l%C3%A8ve-entrepreneur-du-lyc%C3%A9e-moderne-de-port-bouet-102268155390758">PARTICIPEZ</a>
         </div>
       </div>
 
@@ -411,9 +411,11 @@
               <a href="https://www.oxfam.org/fr"><img src="./images/oxfam.png" alt=""></a>
             </li>
             <li class="glide__slide">
-              <a href="https://www.total.sn/"><img src="./images/total senegal.png" alt=""></a>
+              <a href="http://www.eauxetforets.gouv.ci/"><img src="./images/eaux et foret.png" alt=""></a>
             </li>
-            
+            <li class="glide__slide">
+              <a href="https://www.port-bouet.ci/"><img src="./images/mairie de port bouet.jpg" alt=""></a>
+            </li>
             
           </ul>
         </div>
