--- a/pavet.html
+++ b/pavet.html
@@ -181,7 +181,7 @@
         <div class="bottom">
           <a href="">Savon liquide</a>
           <div class="price">
-            <span>500 fcfa</span>
+            <span>3(bidon)x500 fcfa</span>
           </div>
         </div>
       </div>
@@ -190,7 +190,7 @@
         <div class="img-container">
           <img src="./images/DEMI paquette.jpg" alt="" />
           <div class="addCart">
-            <a href="oeufs africain.html"><i class="fas fa-shopping-cart"></i></a>
+            <a href="oeufs africain .html"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
@@ -202,8 +202,8 @@
         <div class="bottom">
           <a href="">Oeufs Africain</a>
           <div class="price">
-            <span>150 fcfa</span>
-            <span class="cancel">200 fcfa</span>
+            <span>150 fcfa/oeuf</span>
+            <span class="cancel">200 fcfa/oeuf</span>
           </div>
         </div>
       </div>
